# aeson-schema

./: .gitignore  .travis.yml  ExampleJson.hs  README.md  aeson-schema.cabal  example.json  stack.yaml
app/: Main.hs
src/Data/Aeson/Schema/: Choice.hs  CodeGen.hs  CodeGenM.hs  Helpers.hs  Types.hs  Validator.hs
src/Data/Aeson/Schema/Choice/: TH.hs
src/RunApp/: Main.hs
test/: TestSuite.hs
test/Data/Aeson/Schema/: Examples.hs
test/Data/Aeson/Schema/CodeGen/: Tests.hs
test/Data/Aeson/Schema/Types/: Tests.hs
test/Data/Aeson/Schema/Validator/: Tests.hs
test/TestSuite/: Types.hs
